--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 <header>
 	<!-- HEADER -->
 	<div class="grigliaHeader">
-		<a href="#indice1" style="text-decoration: none; grid-column: span 12;" >
+		<a href="#indice1" style="text-decoration: none" >
 			<div class="cella header">
-				<section class="nascosto">
-					↓<tab1></tab1>Prima<br><tab2></tab2>del telegrafo<br><tab2></tab2>elettrico
-				</section>
+				<div style="display: flex; justify-content: flex-start">
+					<div style="color: #d9d9d9; margin-right: 3.5em">
+						↓
+					</div>
+					<div class="nascosto" style="color: #d9d9d9;">
+						Prima<br>del telegrafo<br>elettrico
+					</div>
+				</div>
+			
 
 				<section class="cella morse">
 					Prima<br>del telegrafo<br>elettrico
@@ -23,45 +29,66 @@
 		</a> 
 		
 		<div class="cella header">
-			<section class="nascosto">
-				↓<tab1></tab1>Il<br><tab2></tab2>telegrafo<br><tab2></tab2>elettrico
-			</section>
+			<div style="display: flex; justify-content: flex-start">
+				<div style="color: #d9d9d9; margin-right: 3.5em">
+					↓
+				</div>
+				<div class="nascosto" style="color: #d9d9d9;">
+					Il<br>telegrafo<br>elettrico
+				</div>
+			</div>
+			
 			<section class="cella morse" style="color:#d9d9d9">
 				Il<br>telegrafo<br>elettrico
 			</section>
 		</div>
 		<div class="cella header">
-			<section class="nascosto">
-				↓<tab1></tab1>Il<br><tab2></tab2>telegrafo<br><tab2></tab2>di Morse
-			</section>
+			<div style="display: flex; justify-content: flex-start">
+				<div style="color: #d9d9d9; margin-right: 3.5em">
+					↓
+				</div>
+				<div class="nascosto" style="color: #d9d9d9;">
+					Il<br>telegrafo<br>di Morse
+				</div>
+			</div>
 			<section class="cella morse" style="color:#d9d9d9">
 				Il<br>telegrafo<br>di Morse
 			</section>
 		</div>
 		<div class="cella header">
-			<section class="nascosto">
-				↓<tab1></tab1>Il codice<br><tab2></tab2>Morse<br>
-			</section>
+			<div style="display: flex; justify-content: flex-start">
+				<div style="color: #d9d9d9; margin-right: 3.5em">
+					↓
+				</div>
+				<div class="nascosto" style="color: #d9d9d9;">
+					Il codice<br>Morse
+				</div>
+			</div>
 			<section class="cella morse" style="color:#d9d9d9">
 				Il codice<br>Morse
 			</section>
 		</div>
 
-		<div class="cella header">
-			<section class="nascosto">
-				←<tab1></tab1>Indice
-			</section>
+		<div class="cella header" style="padding-bottom: 3.5em;">
+			<div style="display: flex; justify-content: flex-start">
+				<div style="color: #d9d9d9; margin-right: 3.5em">
+					←
+				</div>
+				<div class="nascosto" style="color: #d9d9d9;">
+					Indice
+				</div>
+			</div>
 			<section class="cella morse" style="color:#d9d9d9">
 				Indice
 				
 			</section>
 			
 	</div>
-	<div class="cella vuoto12"> </div>
+
 </header>
 
 <body>
-	<br><br><br>
+	<br><br>
 	<hr style="border: 1px solid #d9d9d9; background-color: #d9d9d9;">
 	<div class="cella sottotitolo">
 		<section id="indice1">
@@ -74,35 +101,37 @@
 	<div class="griglia1">
 
 		<div class="cella vuoto12"></div>
-		<div class="cella vuoto1"></div>
+		<div class="cella vuoto1"> </div>
 		<div class="cella foto1">
 			<img src = "img/murray.jpg" class="adattaImmagine"> 
 			<p class="cella didascalia" style="margin: 0">
 				Incisione raffigurante il telegrafo ottico ideato da Lord George Murray nel 1795 e adottato dall’Ammiragliato per comunicazioni rapide a lungo raggio
 			</p>
-	
+			<br>
 			
 		</div>
 	
 		
-		<div class="cella vuoto1"></div>
+		<div class="cella vuoto1"> </div>
 		<div class="cella testo">
-			Nel corso della storia l’uomo ha comunicato a distanza per motivi bellici, 
-			commerciali o per trasmettere notizie importanti (come ad esempio l’annuncio 
-			dei vincitori delle Olimpiadi). Napoleone Bonaparte fece pieno uso del 
-			telegrafo ottenendo informazioni rapide sui movimenti nemici. Nel 1801 fece 
-			costruire ad Abraham Chappe una stazione di grandissime dimensioni per trasmettere
-			 attraverso la Manica, in preparazione per un’invasione della Gran Bretagna.
-			 Nel 1812, Napoleone riprese un altro progetto di Abraham Chappe per un telegrafo 
-			 mobile che poteva essere portato con sé in campagna. Questo è stato utilizzato 
-			 fino al 1853 nella guerra di Crimea. I metodi antecedenti la telegrafia elettrica
-			non erano particolarmente efficienti ma pur sempre funzionali. Furono due i 
-			sistemi di trasmissione utilizzati nel passato: la telecomunicazione ottica 
-			(realizzata mediante segnali visibili e display variabili) e la telecomunicazione 
-			acustica (realizzata mediante segnali sonori). Di seguito sono elencati alcuni 
-			sistemi di trasmissione ottici che hanno perdurato per mezzo secolo.
+			<p>	Nel corso della storia l’uomo ha comunicato a distanza per motivi bellici, 
+				commerciali o per trasmettere notizie importanti (come ad esempio l’annuncio 
+				dei vincitori delle Olimpiadi). Napoleone Bonaparte fece pieno uso del 
+				telegrafo ottenendo informazioni rapide sui movimenti nemici. Nel 1801 fece 
+				costruire ad Abraham Chappe una stazione di grandissime dimensioni per trasmettere
+				 attraverso la Manica, in preparazione per un’invasione della Gran Bretagna.
+				 Nel 1812, Napoleone riprese un altro progetto di Abraham Chappe per un telegrafo 
+				 mobile che poteva essere portato con sé in campagna. Questo è stato utilizzato 
+				 fino al 1853 nella guerra di Crimea.<br> I metodi antecedenti la telegrafia elettrica
+				non erano particolarmente efficienti ma pur sempre funzionali. Furono due i 
+				sistemi di trasmissione utilizzati nel passato: la telecomunicazione ottica 
+				(realizzata mediante segnali visibili e display variabili) e la telecomunicazione 
+				acustica (realizzata mediante segnali sonori). Di seguito sono elencati alcuni 
+				sistemi di trasmissione ottici che hanno perdurato per mezzo secolo.
+			</p>
+		
 		</div>
-		<div class="cella vuoto1"></div>
+		<div class="cella vuoto1"> </div>
 	</div>
 
 	
