--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 1em; margin-top: 20em; margin-left: 1em; margin-right: 1em">
 	<div class="griglia1">
 		<div class ="cella dateTimeline">
-				1837
+				1836
 		</div>
 		<div class ="cella dateTimeline">
 				
@@ -307,7 +307,7 @@
 
 	<div class="griglia1">
 		<div class ="cella dateTimeline">
-			<img src = "img/tel1.jpg" class="adattaImmagineTimeline"> 
+			<img src = "img/telele1.jpg" class="adattaImmagineTimeline"> 
 		</div>
 		<div class ="cella didascalia2">
 			Era una forma di telegrafo ad ago e il primo sistema telegrafico 
@@ -316,7 +316,7 @@
 			mossi da bobine elettromagnetiche per indicare le lettere su una lavagna.
 		</div>
 		<div class ="cella dateTimeline">
-			<img src = "img/tel3.jpg" class="adattaImmagineTimeline"> 
+			<img src = "img/telele2.jpg" class="adattaImmagineTimeline"> 
 		</div>
 		<div class ="cella didascalia2">
 			Hughes perfezionò il telegrafo Morse, sostituendo al tasto con cui battere le 
@@ -324,10 +324,10 @@
 			un pianoforte con 28 tasti, uno per ogni lettera dell’alfabeto.
 		</div>
 		<div class ="cella dateTimeline">
-			<img src = "img/tel5.png" class="adattaImmagineTimeline"> 
+			<img src = "img/telele3.jpg" class="adattaImmagineTimeline"> 
 		</div>
 		<div class ="cella didascalia2">
-			Baudot inventò il suo codice telegrafo nel 1870 e lo brevettò nel 1874. 
+			Baudot inventò il suo codice nel 1870 e lo brevettò nel 1874. 
 			Era un codice a 5 bit, che ha permesso la trasmissione telegrafica dei 
 			segnali dell’alfabeto romano, di punteggiatura e di controllo.
 		
