Avanzamento layout statico

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lan="it">
+<link rel="stylesheet" href="https://use.typekit.net/lwh1etl.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="Telegrafo.css" />
@@ -14,13 +18,12 @@
 			<div class="cella header">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
-						↓
+						<img src = "img/arrow_downward_white_36dp.svg">
 					</div>
 					<div class="nascosto" style="color: #d9d9d9;">
 						Prima<br>del telegrafo<br>elettrico
 					</div>
 				</div>
-			
 
 				<section class="cella morse">
 					Prima<br>del telegrafo<br>elettrico
@@ -32,7 +35,7 @@
 			<div class="cella header">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
-						↓
+						<img src = "img/arrow_downward_white_36dp.svg">
 					</div>
 					<div class="nascosto" style="color: #d9d9d9;">
 						Il<br>telegrafo<br>elettrico
@@ -49,7 +52,7 @@
 			<div class="cella header">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
-						↓
+						<img src = "img/arrow_downward_white_36dp.svg">
 					</div>
 					<div class="nascosto" style="color: #d9d9d9;">
 						Il<br>telegrafo<br>di Morse
@@ -64,7 +67,7 @@
 		<div class="cella header">
 			<div style="display: flex; justify-content: flex-start">
 				<div style="color: #d9d9d9; margin-right: 3.5em">
-					↓
+					<img src = "img/arrow_downward_white_36dp.svg">
 				</div>
 				<div class="nascosto" style="color: #d9d9d9;">
 					Il codice<br>Morse
@@ -78,7 +81,7 @@
 		<div class="cella header" style="padding-bottom: 3.5em;">
 			<div style="display: flex; justify-content: flex-start">
 				<div style="color: #d9d9d9; margin-right: 3.5em">
-					←
+					<img src = "img/arrow_back_white_36dp.svg">
 				</div>
 				<div class="nascosto" style="color: #d9d9d9;">
 					Indice
@@ -95,13 +98,15 @@
 
 <body>
 	<br><br>
-	<hr  id="indice1" style="border: 1.5px solid #d9d9d9; background-color: #d9d9d9;">
-	<div class="cella sottotitolo">
-		<section>
-				Prima del telegrafo elettrico
-		</section>
+	<hr  id="indice1" style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9;">
+	<div class="griglia1">
+		<div class="vuoto1"></div>
+		<div class="cella sottotitolo" style="padding: 0em; margin-top: -0.25em; margin-bottom: -0.25em">
+			Prima del telegrafo elettrico
+		</div>
 	</div>
-	<hr style="border: 1.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 20em;">
+	
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 15em;">
 	
 	
 	<div class="griglia1">
@@ -113,9 +118,7 @@
 				nel 1795 e adottato dall’Ammiragliato per comunicazioni rapide a lungo raggio
 			</p>
 			<br>
-			
 		</div>
-	
 		
 		<div class="cella vuoto1"> </div>
 		<div class="cella testo">
@@ -127,7 +130,7 @@
 				 attraverso la Manica, in preparazione per un’invasione della Gran Bretagna.
 				 Nel 1812, Napoleone riprese un altro progetto di Abraham Chappe per un telegrafo 
 				 mobile che poteva essere portato con sé in campagna. Questo è stato utilizzato 
-				 fino al 1853 nella guerra di Crimea.<br> I metodi antecedenti la telegrafia elettrica
+				 fino al 1853 nella guerra di Crimea. I metodi antecedenti la telegrafia elettrica
 				non erano particolarmente efficienti ma pur sempre funzionali. Furono due i 
 				sistemi di trasmissione utilizzati nel passato: la telecomunicazione ottica 
 				(realizzata mediante segnali visibili e display variabili) e la telecomunicazione 
@@ -138,7 +141,10 @@
 
 		<div class="cella vuoto1"> </div>
 	</div>
-	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 1em; margin-top: 20em; margin-left: 1em; margin-right: 1em">
+
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: -0.75em;
+	 margin-top: 15em; margin-left: 1em; margin-right: 1em">
+
 	<div class="griglia1">
 		<div class ="cella dateTimeline">
 				1684
@@ -181,7 +187,7 @@
 		</div>
 	</div>
 
-	<div class="griglia1"  style="margin-bottom: 20em">
+	<div class="griglia1"  style="margin-bottom: 15em">
 		<div class ="cella didascaliaTimeline">
 			Telegrafo di Robert Hooke
 		</div>
@@ -231,16 +237,19 @@
 			</div>
 	</div>
 
-	<hr id="indice2" style="border: 1.5px solid #d9d9d9; background-color: #d9d9d9; margin-top: 20em">
-	<div class="cella sottotitolo">
-		<section>
-			Il telegrafo elettrico
-		</section>
-	</div>
-	<hr style="border: 1.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 20em;">
+	<hr id="indice2" style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-top: 15em">
 
 	<div class="griglia1">
-		<div class="cella vuoto1"> </div>
+		<div class="vuoto1"></div>
+		<div class="cella sottotitolo" style="padding: 0em; margin-top: -0.25em; margin-bottom: -0.25em">
+			Il telegrafo elettrico
+		</div>
+	</div>
+
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 15em;">
+
+	<div class="griglia1">
+		<div class="vuoto1"></div>
 		<div class="cella foto1">
 			<img src = "img/murray.jpg" class="adattaImmagine1"> 
 			<p class="cella didascalia" style="margin: 0">
@@ -283,7 +292,9 @@
 		</div>
 	</div>
 
-	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 1em; margin-top: 20em; margin-left: 1em; margin-right: 1em">
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: -0.75em; 
+	margin-top: 15em; margin-left: 1em; margin-right: 1em">
+
 	<div class="griglia1">
 		<div class ="cella dateTimeline">
 				1836
@@ -355,13 +366,74 @@
 		</div>
 	</div>
 
-	<hr id="indice3" style="border: 1.5px solid #d9d9d9; background-color: #d9d9d9; margin-top: 20em">
-	<div class="cella sottotitolo">
-		<section>
-			Il telegrafo di Morse
-		</section>
+	<hr id="indice3" style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-top: 15em">
+
+	<div class="griglia1">
+		<div class="vuoto1"></div>
+		<div class="cella sottotitolo" style="padding: 0em; margin-top: -0.25em; margin-bottom: -0.25em">
+				Il telegrafo di Morse
+		</div>
 	</div>
-	<hr style="border: 1.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 20em;">
+
+
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 15em;">
+
+	<div class="griglia1">
+		<div class="vuoto1"></div>
+		<div class="cella foto1">
+			<img src = "img/murray.jpg" class="adattaImmagine1"> 
+			<p class="cella didascalia" style="margin: 0">
+				Incisione raffigurante il telegrafo ottico ideato da Lord George Murray 
+				nel 1795 e adottato dall’Ammiragliato per comunicazioni rapide a lungo raggio
+			</p>
+			<br>
+			<img src = "img/murray.jpg" class="adattaImmagine1"> 
+			<p class="cella didascalia" style="margin: 0">
+				Incisione raffigurante il telegrafo ottico ideato da Lord George Murray 
+				nel 1795 e adottato dall’Ammiragliato per comunicazioni rapide a lungo raggio
+			</p>
+			<br>
+			
+		</div>
+	
+		<div class="cella vuoto1"> </div>
+		
+		<div class="cella testo">
+			<p>	
+				Il 6 gennaio del 1838, Samuel Morse compie il primo test di successo 
+				sul telegrafo elettrico, la prima delle tante rivoluzioni nel mondo 
+				delle comunicazioni che hanno contrassegnato la nostra modernità. 
+				Nato nel 1791 a Charleston, nel Massachusetts, Morse studia all’università 
+				di Yale e poi parte per Londra per dedicarsi alla pittura e alla scultura. 
+				Sarà ricordato per aver inventato il telegrafo elettrico e il relativo alfabeto 
+				(o codice Morse).Solo negli anni trenta comincia gli esperimenti chimici ed 
+				elettrici che gli permettono di mettere a punto un apparecchio telegrafico 
+				elettromagnetico che brevetta negli Stati Uniti. Alcuni anni dopo, nel 1843, 
+				il Congresso Usa gli affiderà i fondi per la costruzione della Western Union, 
+				la linea telegrafica che congiunge in via sperimentale Washington alla città 
+				di Baltimora nel Mariland. Il 24 maggio 1844 riesce ad inviare il primo messaggio 
+				telegrafico in codice Morse. L’invenzione avviene in collaborazione con Alfred Vail, 
+				ma poi tra i due scoppia una rivalità e un contenziososo giudiziario per la 
+				paternità del telegrafo elettrico, alla fine della quale Morse ha la meglio.
+				In breve tempo il sistema comincia a diffondersi in ogni continente formando una fitta rete, 
+				grazie anche a ulteriori perfezionamenti quali l’introduzione degli isolatori in vetro o 
+				ceramica, il filo di rame al posto del ferro ed il sistema ‘’duplex’’, che consentirono 
+				di aumentare la lunghezza delle tratte ed aumentarne l’efficienza. Si forma anche una 
+				classe di operatori specializzati, alcuni dei quali arrivavano a digitare il codice Morse 
+				ad una velocità di 80-100 caratteri al minuto.
+				I nodi della rete, gli uffici telegrafici intermedi (Relais), provvedevano ad 
+				instradare i messaggi sulle giuste tratte fino a destinazione. Da notare che il 
+				$lavoro veniva svolto a mano: i messaggi ricevuti erano letti e, in base alla destinazione, 
+				consegnati all’impiegato che li ritelegrafava sul tratto successivo. Il sistema venne 
+				parzialmente automatizzato con l’introduzione del nastro perforato e dei 
+				trasmettitori automatici.Oltre ai messaggi privati, sulla rete telegrafica 
+				viaggiavano le notizie dei corrispondenti ai giornali: è l’epoca in nascono 
+				le agenzie di stampa, prime fra tutte la Reuters.Nell’ottobre del 1861 il telegrafo 
+				collegò la costa occidentale del continente alla costa orientale, ponendo fine 
+				al Pony Express.
+			</p>
+		</div>
+	</div>
 
 </body>
 </html>
