--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 </header>
 
 <body>
+
 	<br><br>
 	<hr  id="indice1" style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9;">
 	<div class="griglia1">
@@ -106,12 +107,14 @@
 		</div>
 	</div>
 	
-	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 15em;">
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 0em;">
 	
-	
+	<div class="sticky" style="color: white;">
+		<img src="img/arrow_upward_white_36dp.svg">
+	</div>
 	<div class="griglia1">
 		<div class="cella vuoto1"> </div>
-		<div class="cella foto1">
+		<div class="foto1">
 			<img src = "img/murray.jpg" class="adattaImmagine"> 
 			<p class="cella didascalia" style="margin: 0">
 				Incisione raffigurante il telegrafo ottico ideato da Lord George Murray 
@@ -138,9 +141,10 @@
 				sistemi di trasmissione ottici che hanno perdurato per mezzo secolo.
 			</p>
 		</div>
-
 		<div class="cella vuoto1"> </div>
 	</div>
+
+	
 
 	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: -0.75em;
 	 margin-top: 15em; margin-left: 1em; margin-right: 1em">
@@ -250,7 +254,7 @@
 
 	<div class="griglia1">
 		<div class="vuoto1"></div>
-		<div class="cella foto1">
+		<div class="foto1">
 			<img src = "img/murray.jpg" class="adattaImmagine1"> 
 			<p class="cella didascalia" style="margin: 0">
 				Incisione raffigurante il telegrafo ottico ideato da Lord George Murray 
@@ -380,17 +384,15 @@
 
 	<div class="griglia1">
 		<div class="vuoto1"></div>
-		<div class="cella foto1">
-			<img src = "img/murray.jpg" class="adattaImmagine1"> 
+		<div class="foto1">
+			<img src = "img/Samuel_Morse.jpg" class="adattaImmagine2"> 
 			<p class="cella didascalia" style="margin: 0">
-				Incisione raffigurante il telegrafo ottico ideato da Lord George Murray 
-				nel 1795 e adottato dall’Ammiragliato per comunicazioni rapide a lungo raggio
+				Samuel Morse (1791-1872)
 			</p>
 			<br>
-			<img src = "img/murray.jpg" class="adattaImmagine1"> 
+			<img src = "img/TelegrafoGottardo.jpg" class="adattaImmagine2"> 
 			<p class="cella didascalia" style="margin: 0">
-				Incisione raffigurante il telegrafo ottico ideato da Lord George Murray 
-				nel 1795 e adottato dall’Ammiragliato per comunicazioni rapide a lungo raggio
+				Tasto di Morse (ca. 1900) utilizzato nella Ferrovia del Gottardo
 			</p>
 			<br>
 			
@@ -433,6 +435,14 @@
 				al Pony Express.
 			</p>
 		</div>
+	</div>
+	<h3 class="cella sottotitolo" style="text-align: center; margin-top: 5em;">
+		“What hath God wrought?”
+	</h3>
+
+	<div class="griglia1">
+		<div class="foto2"
+
 	</div>
 
 </body>
