--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="Telegrafo.css" />
 	<title>Telegrafo</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <style>
 </style>
