--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <link rel="stylesheet" href="https://use.typekit.net/lwh1etl.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="Telegrafo.css" />
 	<title>Telegrafo</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 </head>
 <style>
 </style>
 <header>
 	<!-- HEADER -->
 	<div class="grigliaHeader">
-		<a href="#indice1" style="text-decoration: none" >
-			<div class="cella header">
+		<a href="#indice1">
+			<div class="cella header" id="tornaSu">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
 						<img src = "img/arrow_downward_white_36dp.svg">
@@ -32,7 +33,7 @@
 			</div>
 		</a> 
 
-		<a href="#indice2" style="text-decoration: none" >
+		<a href="#indice2">
 			<div class="cella header">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
@@ -49,7 +50,7 @@
 			</div>
 		</a>
 
-		<a href="#indice3" style="text-decoration: none" >
+		<a href="#indice3">
 			<div class="cella header">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
@@ -82,7 +83,7 @@
 		<div class="cella header" style="padding-bottom: 3.5em;">
 			<div style="display: flex; justify-content: flex-start">
 				<div style="color: #d9d9d9; margin-right: 3.5em">
-					<img src = "img/arrow_back_white_36dp.svg">
+					<img src= "img/arrow_back_white_36dp.svg">
 				</div>
 				<div class="nascosto" style="color: #d9d9d9;">
 					Indice
@@ -108,12 +109,17 @@
 		</div>
 	</div>
 	
-	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 0em;">
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 5em;">	
 	
 	<div class="sticky" style="color: white;">
-		<img src="img/arrow_upward_white_36dp.svg">
+		<a href="#tornaSu">
+			<img src ="img/arrow_upward_white_36dp.jpg" id="indice1" class="responsive">
+		</a>
 	</div>
-	<div class="griglia1">
+
+
+	
+	<div class="griglia1" style="margin-top: -2vw">
 		<div class="cella vuoto1"> </div>
 		<div class="foto1">
 			<img src = "img/murray.jpg" class="adattaImmagine"> 
@@ -145,7 +151,7 @@
 		<div class="cella vuoto1"> </div>
 	</div>
 
-	
+
 
 	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: -0.75em;
 	 margin-top: 15em; margin-left: 1em; margin-right: 1em">
@@ -251,7 +257,7 @@
 		</div>
 	</div>
 
-	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 15em;">
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 5em;">
 
 	<div class="griglia1">
 		<div class="vuoto1"></div>
@@ -381,7 +387,7 @@
 	</div>
 
 
-	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 15em;">
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 5em;">
 
 	<div class="griglia1">
 		<div class="vuoto1"></div>
@@ -426,7 +432,7 @@
 				ad una velocità di 80-100 caratteri al minuto.
 				I nodi della rete, gli uffici telegrafici intermedi (Relais), provvedevano ad 
 				instradare i messaggi sulle giuste tratte fino a destinazione. Da notare che il 
-				$lavoro veniva svolto a mano: i messaggi ricevuti erano letti e, in base alla destinazione, 
+				lavoro veniva svolto a mano: i messaggi ricevuti erano letti e, in base alla destinazione, 
 				consegnati all’impiegato che li ritelegrafava sul tratto successivo. Il sistema venne 
 				parzialmente automatizzato con l’introduzione del nastro perforato e dei 
 				trasmettitori automatici.Oltre ai messaggi privati, sulla rete telegrafica 
@@ -442,7 +448,47 @@
 	</h3>
 
 	<div class="griglia1">
-		<div class="foto2"
+		<div class="vuoto1"></div>
+		<div class="foto2">
+			<img src="img/The_First_Telegraph.jpg"  class="adattaImmagineTimeline">
+		</div>
+		<div class="vuoto1"></div>
+	</div>
+	<div class="griglia1">
+		<div class="vuoto1"></div>
+		<div class="cella didascalia3">
+			<section>
+				Trasmissione ufficiale tra le città di Washington e Baltimora (24 maggio 1844). <br>
+				Il professor Samuel Morse invia il dispaccio come dettato dalla signorina Annie 
+			</section> 
+		</div>			
+		
+		<div class="cella didascalia3">
+			<section style="margin-bottom: 15em;">
+				Ellsworth. Il suo messaggio: “What hath God wrought?” proveniva dal Libro dei Numeri (quarto libro 
+				della Torah ebraica e della Bibbia cristiana).
+			</section>
+		</div>
+
+		<div class="vuoto1"></div>
+	</div>
+
+	<div class="griglia1">
+		<div class="vuoto1"></div>
+			<div class="cella testo" style="display: flex; justify-content: flex-start">
+				<div style="margin-right: 2em;">
+					1.<br>2.<br>3.<br>4.<br>5.<br>6.<br>7.<br>8.<br>9.<br>10.<br>11.
+				</div>
+				<div>
+					Stazione trasmittente<br>Stazione ricevente<br>Tasto/manipolatore<br>Batteria<br>
+					Messa a terra<br>Filo/linea<br>Elettromagnete<br>Punzone scrivente<br>Bobina nastro di carta<br>
+					Rullo inchiostrato<br>Rullo di trascinamento
+				</div>
+			</div>
+			
+		<div class="foto3">
+			<img src="img/componenti.png" class="adattaImmagine3">
+		</div>
 
 	</div>
 
