--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="cella header" id="tornaSu">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
-						<img src = "img/arrow_downward_white_36dp.svg">
+						<img src = "img/arrow_downward_white_36dp.svg" class="responsive">
 					</div>
 					<div class="nascosto" style="color: #d9d9d9;">
 						Prima<br>del telegrafo<br>elettrico
@@ -37,7 +37,7 @@
 			<div class="cella header">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
-						<img src = "img/arrow_downward_white_36dp.svg">
+						<img src = "img/arrow_downward_white_36dp.svg"  class="responsive">
 					</div>
 					<div class="nascosto" style="color: #d9d9d9;">
 						Il<br>telegrafo<br>elettrico
@@ -54,7 +54,7 @@
 			<div class="cella header">
 				<div style="display: flex; justify-content: flex-start">
 					<div style="color: #d9d9d9; margin-right: 3.5em">
-						<img src = "img/arrow_downward_white_36dp.svg">
+						<img src = "img/arrow_downward_white_36dp.svg" class="responsive">
 					</div>
 					<div class="nascosto" style="color: #d9d9d9;">
 						Il<br>telegrafo<br>di Morse
@@ -69,7 +69,7 @@
 		<div class="cella header">
 			<div style="display: flex; justify-content: flex-start">
 				<div style="color: #d9d9d9; margin-right: 3.5em">
-					<img src = "img/arrow_downward_white_36dp.svg">
+					<img src = "img/arrow_downward_white_36dp.svg" class="responsive">
 				</div>
 				<div class="nascosto" style="color: #d9d9d9;">
 					Il codice<br>Morse
@@ -83,7 +83,7 @@
 		<div class="cella header" style="padding-bottom: 3.5em;">
 			<div style="display: flex; justify-content: flex-start">
 				<div style="color: #d9d9d9; margin-right: 3.5em">
-					<img src= "img/arrow_back_white_36dp.svg">
+					<img src= "img/arrow_back_white_36dp.svg" class="responsive">
 				</div>
 				<div class="nascosto" style="color: #d9d9d9;">
 					Indice
@@ -222,7 +222,7 @@
 	<div class="griglia1">
 		<div class="cella vuoto6"> </div>
 			<div class="cella testo">
-				<div class="sottotitolo" style="margin-left: 0;">
+				<div class="sottotitolo1" style="margin-left: 0;">
 					Criticità dei telegrafi ottici 
 				</div>	
 				<br>
@@ -469,7 +469,6 @@
 				della Torah ebraica e della Bibbia cristiana).
 			</section>
 		</div>
-
 		<div class="vuoto1"></div>
 	</div>
 
@@ -486,11 +485,47 @@
 				</div>
 			</div>
 			
-		<div class="foto3">
+		<div class="foto3" style="margin-bottom: 15em">
 			<img src="img/componenti.png" class="adattaImmagine3">
 		</div>
-
 	</div>
 
+	<div class="griglia1">
+		<div class="vuoto1"></div>
+		<div class="sottotitolo1">
+			Principali linee telegrafiche nel 1891
+		</div>
+	</div>
+
+	<div class="griglia1">
+		<div class="vuoto1"></div>
+		<div class="foto2">
+			<img src="img/1891_Telegraph_Lines.jpg" class="adattaImmagineTimeline">
+		</div>
+	</div>
+
+	<div class="griglia1">
+		<div class="vuoto1"></div>
+		<div class="cella didascalia3">
+			<section>
+				Subito dopo che i primi sistemi telegrafici di successo furono operativi, fu inizialmente proposta 
+				la possibilità di trasmettere messaggi attraverso il mare tramite cavi di comunicazione sottomarini. 
+				Una delle principali sfide tecniche era isolare sufficientemente il cavo sottomarino per evitare che 
+				la corrente elettrica fuoriuscisse in acqua. Nel 1842, un chirurgo scozzese William Montgomerie introdusse 
+				in Europa la guttaperca, il succo adesivo dell’albero di gutta del Palaquium. Michael Faraday e Wheatstone 
+				scoprirono presto i meriti della guttaperca come isolante e nel 1845 quest’ultimo suggerì che sarebbe stato 
+				impiegato per coprire il filo che si proponeva di posare da Dover a Calais. La guttaperca è stata utilizzata 
+				come 
+			</section> 
+		</div>			
+		
+		<div class="cella didascalia3">
+			<section style="margin-bottom: 15em;">
+				Ellsworth. Il suo messaggio: “What hath God wrought?” proveniva dal Libro dei Numeri (quarto libro 
+				della Torah ebraica e della Bibbia cristiana).
+			</section>
+		</div>
+		<div class="vuoto1"></div>
+	</div>
 </body>
 </html>
