--- a/index.html
+++ b/index.html
@@ -797,9 +797,41 @@
 		<div class="spazio1"></div>
 	</div>
 
-	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9">
+	<hr style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-bottom: 5em;">
+
 	<div class="griglia1">
+		<div class="spazio1"></div>
+		<div class="cella testo">
+			Altante tecnologico <br><br>
+			Il telegrafo<br>
+			Danijel Cancar<br>
+			SUPSI CV2<br>
+			Interaction Design<br>
+			Anno 2020-2021<br>
+			Docenti: <br>
+			Andreas Gysin<br>
+			Giovanni Profeta<br>
+		</div>
+		<div class="spazio1"></div>
+
+		<div class="cella spazio5">
+			<div class="testo">
+				Sitografia
+			</div> <br><br>
+			<a href="https://en.wikipedia.org/wiki/Telegraphy" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikipedia - Telegraphy</a> <br>
+			<a href="https://it.wikipedia.org/wiki/Codice_Morse" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikipedia - Codice Morse</a> <br>
+			<a href="https://www.treccani.it/enciclopedia/telegrafia/" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Treccani - Telegrafia</a> <br>
+			<a href="https://www.britannica.com/technology/telegraph" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Britannica - Storia del telegrafo</a> <br>
+			<a href="https://www.wikiwand.com/de/Morsetaste" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikiwand - Codice Morse</a> <br>
+			<a href="https://www.itu.int/itunews/manager/display.asp?lang=en&year=2006&issue=09&ipage=pioneers&ext=html#:~:text=Schilling%2C%20Cooke%20and%20Wheatstone&text=This%20principle%20was%20employed%20by,his%20home%20in%20St%20Petersburg." 
+			title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">ITU - Schilling, Cooke and Wheatstone</a> <br>
+			
+
+
+		</div>
 		
+		<div class="spazio5">aa</div>
+		<div class="spazio1"></div>
 	</div>
 
 <!--TRADUTTORE MORSE-->
