--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 			</p>
 		</div>
 	</div>
-	<h3 class="cella sottotitolo" style="text-align: center; margin-top: 5em;">
+	<h3 class="cella sottotitolo" style="text-align: center; margin-top: 10em;">
 		“What hath God wrought?”
 	</h3>
 
@@ -462,7 +462,7 @@
 		<div class="spazio1"></div>
 	</div>
 
-	<div class="griglia1" style="margin-top: 10em;">
+	<div class="griglia1" style="margin-top: 15em;">
 		<div class="spazio1"></div>
 			<div class="cella testo" style="display: flex; justify-content: flex-start">
 				<div style="margin-right: 2em;">
@@ -814,18 +814,18 @@
 		</div>
 		<div class="spazio1"></div>
 
-		<div class="cella spazio5">
+		<div class="cella spazio4">
+
 			<div class="testo">
-				Sitografia
-			</div> <br><br>
-			<a href="https://en.wikipedia.org/wiki/Telegraphy" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikipedia - Telegraphy</a> <br>
-			<a href="https://it.wikipedia.org/wiki/Codice_Morse" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikipedia - Codice Morse</a> <br>
-			<a href="https://www.treccani.it/enciclopedia/telegrafia/" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Treccani - Telegrafia</a> <br>
-			<a href="https://www.britannica.com/technology/telegraph" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Britannica - Storia del telegrafo</a> <br>
-			<a href="https://www.wikiwand.com/de/Morsetaste" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikiwand - Codice Morse</a> <br>
-			<a href="https://www.itu.int/itunews/manager/display.asp?lang=en&year=2006&issue=09&ipage=pioneers&ext=html#:~:text=Schilling%2C%20Cooke%20and%20Wheatstone&text=This%20principle%20was%20employed%20by,his%20home%20in%20St%20Petersburg." 
-			title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">ITU - Schilling, Cooke and Wheatstone</a> <br>
-			
+				Sitografia <br><br>
+				<a href="https://en.wikipedia.org/wiki/Telegraphy" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikipedia - Telegraphy</a> <br>
+				<a href="https://it.wikipedia.org/wiki/Codice_Morse" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikipedia - Codice Morse</a> <br>
+				<a href="https://www.treccani.it/enciclopedia/telegrafia/" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Treccani - Telegrafia</a> <br>
+				<a href="https://www.britannica.com/technology/telegraph" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Britannica - Storia del telegrafo</a> <br>
+				<a href="https://www.wikiwand.com/de/Morsetaste" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikiwand - Codice Morse</a> <br>
+				<a href="https://www.itu.int/itunews/manager/display.asp?lang=en&year=2006&issue=09&ipage=pioneers&ext=html#:~:text=Schilling%2C%20Cooke%20and%20Wheatstone&text=This%20principle%20was%20employed%20by,his%20home%20in%20St%20Petersburg." 
+				title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">ITU - Schilling, Cooke and Wheatstone</a> <br>
+			</div>
 
 
 		</div>
