--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 				Il sistema Morse fu ufficialmente adottato come standard per la telegrafia dell’Europa 
 				continentale nel 1851 con un codice rivisto, che in seguito divenne la base del codice 
 				Morse internazionale. Tuttavia, la Gran Bretagna e l’Impero britannico continuarono a 
-				utilizzare il sistema Cooke e Wheatstone, in alcuni luoghi fino agli anni ‘30. Allo stesso
+				utilizzare il sistema Cooke e Wheatstone, in alcuni luoghi fino agli anni 1930. Allo stesso
 				 modo, gli Stati Uniti hanno continuato a utilizzare internamente il codice Morse americano, 
 				 richiedendo operatori di traduzione esperti in entrambi i codici per i messaggi internazionali. 
 				Negli Stati Uniti, in seguito alla scoperta dell’oro in California nel 1848, si sviluppò 
@@ -325,11 +325,12 @@
 		</div>
 	</div>
 
-	<div class="griglia1">
+	<div class="griglia1" style="margin-bottom: 20em;">
 		<div class ="cella dateTimeline">
 			<img src = "img/telele1.jpg" class="adattaImmagineTimeline"> 
 		</div>
 		<div class ="cella didascalia2">
+			Telegrafo di William Fothergill Cooke e Charles Wheatstone:<br>
 			Era una forma di telegrafo ad ago e il primo sistema telegrafico 
 			ad essere messo in servizio commerciale. 
 			Il ricevitore consisteva in una serie di aghi che potevano essere 
@@ -339,6 +340,7 @@
 			<img src = "img/telele2.jpg" class="adattaImmagineTimeline"> 
 		</div>
 		<div class ="cella didascalia2">
+			Sistema a tastiera di David Edward Hughes:<br>
 			Hughes perfezionò il telegrafo Morse, sostituendo al tasto con cui battere le 
 			sequenze di punti e linee, una tastiera alfanumerica molto simile a quella di 
 			un pianoforte con 28 tasti, uno per ogni lettera dell’alfabeto.
@@ -347,6 +349,7 @@
 			<img src = "img/telele3.jpg" class="adattaImmagineTimeline"> 
 		</div>
 		<div class ="cella didascalia2">
+			Telegrafo di Baudot:<br>
 			Baudot inventò il suo codice nel 1870 e lo brevettò nel 1874. 
 			Era un codice a 5 bit, che ha permesso la trasmissione telegrafica dei 
 			segnali dell’alfabeto romano, di punteggiatura e di controllo.
@@ -354,26 +357,7 @@
 		</div>
 	</div>
 	
-	<div class="griglia1"  style="margin-bottom: 20em">
-		<div class ="cella didascaliaTimeline">
-			Telegrafo di William Fothergill Cooke e Charles Wheatstone
-		</div>
-		<div class ="cella didascaliaTimeline">
-			
-		</div>
-		<div class ="cella didascaliaTimeline">
-			Sistema a tastiera di David Edward Hughes
-		</div>
-		<div class ="cella didascaliaTimeline">
-			
-		</div>
-		<div class ="cella didascaliaTimeline">
-			Telegrafo di Baudot
-		</div>
-		<div class ="cella didascaliaTimeline">
-		
-		</div>
-	</div>
+
 
 	<hr id="indice3" style="border: 0.5px solid #d9d9d9; background-color: #d9d9d9; margin-top: 15em">
 
@@ -464,18 +448,18 @@
 
 	<div class="griglia1" style="margin-top: 20em;">
 		<div class="spazio1"></div>
-			<div class="cella testo" style="display: flex; justify-content: flex-start">
+			<div class="cella spazio4" style="display: flex; justify-content: flex-start; font-size: 1.5vw; ">
 				<div style="margin-right: 2em;">
-					1.<br>2.<br>3.<br>4.<br>5.<br>6.<br>7.<br>8.<br>9.<br>10.<br>11.
+					1.<br>2.<br>3.<br>4.<br>5.<br>6.<br>7.<br>8.<br>9.<br>10.<br>11.<br>12.
 				</div>
 				<div>
 					Stazione trasmittente<br>Stazione ricevente<br>Tasto/manipolatore<br>Batteria<br>
 					Messa a terra<br>Filo/linea<br>Elettromagnete<br>Punzone scrivente<br>Bobina nastro di carta<br>
-					Rullo inchiostrato<br>Rullo di trascinamento
+					Rullo inchiostrato<br>Rullo di trascinamento<br>Nastro di carta
 				</div>
 			</div>
 			
-		<div class="spazio5" style="margin-bottom: 15em">
+		<div class="spazio6" style="margin-bottom: 15em">
 			<img src="img/componenti.png" class="adattaImmagine3">
 		</div>
 	</div>
@@ -823,6 +807,8 @@
 				<a href="https://www.treccani.it/enciclopedia/telegrafia/" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Treccani - Telegrafia</a> <br>
 				<a href="https://www.britannica.com/technology/telegraph" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Britannica - Storia del telegrafo</a> <br>
 				<a href="https://www.wikiwand.com/de/Morsetaste" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikiwand - Codice Morse</a> <br>
+				<a href="http://www.marcogualmini.it/telegrafo.htm" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Marco Gualmini - Storia del telegrafo</a> <br>
+				<a href="https://www.neureka.it/blog/trasmissione-primo-messaggio-telegrafico-morse/" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Neureka - La prima trasmissione </a> <br>
 				<a href="https://www.itu.int/itunews/manager/display.asp?lang=en&year=2006&issue=09&ipage=pioneers&ext=html#:~:text=Schilling%2C%20Cooke%20and%20Wheatstone&text=This%20principle%20was%20employed%20by,his%20home%20in%20St%20Petersburg." 
 				title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">ITU - Schilling, Cooke and Wheatstone</a> <br>
 			</div>
