--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
 
 	</div>
 
-	<div class="griglia1" style="margin-bottom: 15em;">
+	<div class="griglia1" style="margin-bottom: 20em;">
 		<div class="spazio1"></div>
 		<div class="spazio4">
 			<input type="text"></input>
@@ -802,15 +802,15 @@
 
 			<div class="testo">
 				Sitografia <br><br>
-				<a href="https://en.wikipedia.org/wiki/Telegraphy" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikipedia - Telegraphy</a> <br>
-				<a href="https://it.wikipedia.org/wiki/Codice_Morse" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikipedia - Codice Morse</a> <br>
-				<a href="https://www.treccani.it/enciclopedia/telegrafia/" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Treccani - Telegrafia</a> <br>
-				<a href="https://www.britannica.com/technology/telegraph" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Britannica - Storia del telegrafo</a> <br>
-				<a href="https://www.wikiwand.com/de/Morsetaste" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Wikiwand - Codice Morse</a> <br>
-				<a href="http://www.marcogualmini.it/telegrafo.htm" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Marco Gualmini - Storia del telegrafo</a> <br>
-				<a href="https://www.neureka.it/blog/trasmissione-primo-messaggio-telegrafico-morse/" title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">Neureka - La prima trasmissione </a> <br>
+				<a href="https://en.wikipedia.org/wiki/Telegraphy"   target="_blank" style="text-decoration: none; color: white;">Wikipedia - Telegraphy</a> <br>
+				<a href="https://it.wikipedia.org/wiki/Codice_Morse"   target="_blank" style="text-decoration: none; color: white;">Wikipedia - Codice Morse</a> <br>
+				<a href="https://www.treccani.it/enciclopedia/telegrafia/"   target="_blank" style="text-decoration: none; color: white;">Treccani - Telegrafia</a> <br>
+				<a href="https://www.britannica.com/technology/telegraph"   target="_blank" style="text-decoration: none; color: white;">Britannica - Storia del telegrafo</a> <br>
+				<a href="https://www.wikiwand.com/de/Morsetaste"   target="_blank" style="text-decoration: none; color: white;">Wikiwand - Codice Morse</a> <br>
+				<a href="http://www.marcogualmini.it/telegrafo.htm"   target="_blank" style="text-decoration: none; color: white;">Marco Gualmini - Storia del telegrafo</a> <br>
+				<a href="https://www.neureka.it/blog/trasmissione-primo-messaggio-telegrafico-morse/"   target="_blank" style="text-decoration: none; color: white;">Neureka - La prima trasmissione </a> <br>
 				<a href="https://www.itu.int/itunews/manager/display.asp?lang=en&year=2006&issue=09&ipage=pioneers&ext=html#:~:text=Schilling%2C%20Cooke%20and%20Wheatstone&text=This%20principle%20was%20employed%20by,his%20home%20in%20St%20Petersburg." 
-				title="Titolo della pagina" target="_blank" style="text-decoration: none; color: white;">ITU - Schilling, Cooke and Wheatstone</a> <br>
+				  target="_blank" style="text-decoration: none; color: white;">ITU - Schilling, Cooke and Wheatstone</a> <br>
 			</div>
 
 
