link all'indice

--- a/index.html
+++ b/index.html
@@ -69,21 +69,24 @@
 		</a>
 
 		<a href="#indice4">
-		<div class="cella header">
-			<div style="display: flex; justify-content: flex-start">
-				<div style="color: #d9d9d9; margin-right: 3.5em">
-					<img src = "img/arrow_downward_white_36dp.svg" class="responsive">
+			<div class="cella header">
+				<div style="display: flex; justify-content: flex-start">
+					<div style="color: #d9d9d9; margin-right: 3.5em">
+						<img src = "img/arrow_downward_white_36dp.svg" class="responsive">
+					</div>
+					<div class="nascosto" style="color: #d9d9d9;">
+						Il codice<br>Morse
+					</div>
 				</div>
-				<div class="nascosto" style="color: #d9d9d9;">
+				<section class="cella morse" style="color:#d9d9d9">
 					Il codice<br>Morse
-				</div>
+				</section>
 			</div>
-			<section class="cella morse" style="color:#d9d9d9">
-				Il codice<br>Morse
-			</section>
-		</div>
 		</a>
 
+
+
+	<a href="https://ixd-supsi.github.io/atlantetecnolgico/" target="_blank" style="text-decoration: none; color: white;">	
 		<div class="cella header" style="padding-bottom: 3.5em;">
 			<div style="display: flex; justify-content: flex-start">
 				<div style="color: #d9d9d9; margin-right: 3.5em">
@@ -94,11 +97,11 @@
 				</div>
 			</div>
 			<section class="cella morse" style="color:#d9d9d9">
-				Indice
-				
+				Indice	
 			</section>
 			
-	</div>
+		</div>
+	</a>
 
 </header>
 
